CREATE TYPE "auth_provider" AS ENUM (
  'LOCAL',
  'GOOGLE'
);

CREATE TYPE "competency_category" AS ENUM (
  'TECH',
  'SOFT',
  'DOMAIN',
  'VALUE'
);

CREATE TYPE "candidate_status" AS ENUM (
  'PENDING',
  'APPROVED',
  'REJECTED'
);

CREATE TYPE "experience_source" AS ENUM (
  'MANUAL',
  'AI_INTAKE'
);

CREATE TYPE "posting_source" AS ENUM (
  'CRAWLED',
  'MANUAL'
);

CREATE TYPE "posting_status" AS ENUM (
  'ACTIVE',
  'CLOSED',
  'DELETED',
  'COLLECT_FAILED'
);

CREATE TYPE "posting_questions_status" AS ENUM (
  'NOT_CHECKED',
  'AVAILABLE',
  'NOT_AVAILABLE',
  'FAILED'
);

CREATE TYPE "evidence_verify_status" AS ENUM (
  'UNVERIFIED',
  'VERIFIED',
  'REJECTED'
);

CREATE TYPE "match_verdict" AS ENUM (
  'RECOMMEND',
  'CONDITIONAL',
  'HOLD'
);

CREATE TYPE "application_status" AS ENUM (
  'PLANNED',
  'WRITING',
  'SUBMITTED',
  'CANCELLED',
  'DOCUMENT_PASSED',
  'DOCUMENT_FAILED',
  'INTERVIEWING',
  'FINAL_PASSED',
  'FINAL_FAILED'
);

CREATE TYPE "length_unit" AS ENUM (
  'CHARACTER',
  'BYTE'
);

CREATE TYPE "answer_source" AS ENUM (
  'MANUAL',
  'AI_DRAFT'
);

CREATE TYPE "outbox_status" AS ENUM (
  'PENDING',
  'PUBLISHED',
  'FAILED'
);

CREATE TABLE "users" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" varchar(255) UNIQUE NOT NULL,
  "name" varchar(100) NOT NULL,
  "profile_image_url" varchar(1000),
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "user_auth_providers" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "provider" auth_provider NOT NULL,
  "provider_user_id" varchar(255) NOT NULL,
  "password_hash" varchar(255),
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "competencies" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) UNIQUE NOT NULL,
  "category" competency_category NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "competency_aliases" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "competency_id" bigint NOT NULL,
  "alias" varchar(100) UNIQUE NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "competency_candidates" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "job_posting_id" bigint NOT NULL,
  "raw_term" varchar(100) NOT NULL,
  "status" candidate_status NOT NULL DEFAULT 'PENDING',
  "merged_competency_id" bigint,
  "reviewed_by" bigint,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "reviewed_at" timestamptz
);

CREATE TABLE "experiences" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "title" varchar(200) NOT NULL,
  "category" varchar(50),
  "period_text" varchar(50) NOT NULL,
  "sort_date" date,
  "situation" text,
  "task" text,
  "action" text,
  "result" text,
  "source" experience_source NOT NULL DEFAULT 'MANUAL',
  "source_ai_task_id" bigint,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "experience_competencies" (
  "experience_id" bigint NOT NULL,
  "competency_id" bigint NOT NULL,
  "strength" decimal(3,2) NOT NULL DEFAULT 0.7,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now()),
  PRIMARY KEY ("experience_id", "competency_id")
);

CREATE TABLE "companies" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(200) NOT NULL,
  "normalized_name" varchar(200) UNIQUE NOT NULL,
  "career_url" varchar(1000),
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "job_postings" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "company_id" bigint NOT NULL,
  "position" varchar(200) NOT NULL,
  "content" text,
  "source_url" varchar(1000) UNIQUE,
  "deadline" date,
  "source" posting_source NOT NULL,
  "status" posting_status NOT NULL DEFAULT 'ACTIVE',
  "questions_from_server" posting_questions_status NOT NULL DEFAULT 'NOT_CHECKED',
  "source_ai_task_id" bigint,
  "collected_at" timestamptz,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "posting_competencies" (
  "job_posting_id" bigint NOT NULL,
  "competency_id" bigint NOT NULL,
  "weight" decimal(3,2) NOT NULL,
  "evidence_line" text,
  "evidence_start_offset" integer,
  "evidence_end_offset" integer,
  "evidence_section" varchar(100),
  "extractor_version" varchar(50),
  "evidence_status" evidence_verify_status NOT NULL DEFAULT 'UNVERIFIED',
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now()),
  PRIMARY KEY ("job_posting_id", "competency_id")
);

CREATE TABLE "bookmarks" (
  "user_id" bigint NOT NULL,
  "job_posting_id" bigint NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  PRIMARY KEY ("user_id", "job_posting_id")
);

CREATE TABLE "job_matches" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "job_posting_id" bigint NOT NULL,
  "match_score" decimal(5,2),
  "verdict" match_verdict,
  "headline" varchar(300),
  "summary" text,
  "coverage" jsonb,
  "actions" jsonb,
  "input_hash" varchar(64),
  "computed_at" timestamptz,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "job_match_history" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "job_posting_id" bigint NOT NULL,
  "match_score" decimal(5,2),
  "verdict" match_verdict,
  "input_hash" varchar(64),
  "model_version" varchar(50),
  "computed_at" timestamptz NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "applications" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "job_posting_id" bigint NOT NULL,
  "status" application_status NOT NULL DEFAULT 'PLANNED',
  "submitted_at" timestamptz,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "cover_letter_questions" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "application_id" bigint NOT NULL,
  "sequence" integer NOT NULL,
  "prompt_text" text NOT NULL,
  "intent" text,
  "length_limit" integer,
  "length_limit_unit" length_unit NOT NULL DEFAULT 'CHARACTER',
  "requirements" jsonb NOT NULL DEFAULT '[]',
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "cover_letter_answers" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "question_id" bigint NOT NULL,
  "version" integer NOT NULL,
  "content" text NOT NULL,
  "char_count" integer,
  "byte_count" integer,
  "is_final" boolean NOT NULL DEFAULT false,
  "source" answer_source NOT NULL DEFAULT 'MANUAL',
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "answer_requirement_results" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "answer_id" bigint NOT NULL,
  "requirement_seq" integer NOT NULL,
  "addressed" boolean NOT NULL DEFAULT false,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "answer_experiences" (
  "answer_id" bigint NOT NULL,
  "experience_id" bigint NOT NULL,
  PRIMARY KEY ("answer_id", "experience_id")
);

CREATE TABLE "outbox_events" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "aggregate_type" varchar(50) NOT NULL,
  "aggregate_id" bigint NOT NULL,
  "event_type" varchar(50) NOT NULL,
  "payload" jsonb NOT NULL,
  "status" outbox_status NOT NULL DEFAULT 'PENDING',
  "published_at" timestamptz,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE UNIQUE INDEX ON "user_auth_providers" ("provider", "provider_user_id");

CREATE UNIQUE INDEX ON "user_auth_providers" ("user_id", "provider");

CREATE INDEX ON "competency_aliases" ("alias");

CREATE UNIQUE INDEX ON "competency_candidates" ("job_posting_id", "raw_term");

CREATE INDEX ON "competency_candidates" ("status");

CREATE INDEX ON "experiences" ("user_id", "sort_date");

CREATE INDEX ON "experience_competencies" ("competency_id");

CREATE INDEX ON "job_postings" ("company_id", "deadline");

CREATE INDEX ON "job_postings" ("status", "deadline");

CREATE INDEX ON "posting_competencies" ("competency_id");

CREATE UNIQUE INDEX ON "job_matches" ("user_id", "job_posting_id");

CREATE INDEX ON "job_match_history" ("user_id", "job_posting_id", "computed_at");

CREATE UNIQUE INDEX ON "applications" ("user_id", "job_posting_id");

CREATE INDEX ON "applications" ("user_id");

CREATE UNIQUE INDEX ON "cover_letter_questions" ("application_id", "sequence");

CREATE UNIQUE INDEX ON "cover_letter_answers" ("question_id", "version");

CREATE UNIQUE INDEX ON "answer_requirement_results" ("answer_id", "requirement_seq");

CREATE INDEX ON "outbox_events" ("status", "created_at");

COMMENT ON TABLE "users" IS '이메일 동일 = 자동 계정 병합 금지. 소셜 계정 연결은 검증된 이메일 + 명시적 연결 절차로만 수행 (서비스 레이어 규칙)';

COMMENT ON COLUMN "user_auth_providers"."provider_user_id" IS 'LOCAL: users.email과 동일 값, GOOGLE: sub';

COMMENT ON COLUMN "user_auth_providers"."password_hash" IS 'LOCAL만 NOT NULL — CHECK는 career_fit_constraints.sql';

COMMENT ON COLUMN "competency_candidates"."reviewed_by" IS 'users.id, 승인자';

COMMENT ON COLUMN "experiences"."source_ai_task_id" IS 'AI Service DB(ai_tasks.id) 참조값. 물리 FK 없음';

COMMENT ON COLUMN "experience_competencies"."strength" IS 'CHECK 0~1은 career_fit_constraints.sql';

COMMENT ON COLUMN "companies"."normalized_name" IS '표기 차이 정규화 후 값(소문자·특수문자 제거 등). 동일기업 판별 키';

COMMENT ON COLUMN "job_postings"."source_url" IS '삽입 전 쿼리스트링·trailing slash 정규화 (서비스 레이어)';

COMMENT ON COLUMN "job_postings"."deadline" IS 'NULL 허용 = 상시채용';

COMMENT ON COLUMN "job_postings"."source_ai_task_id" IS 'AI Service DB(ai_tasks.id) 참조값. 물리 FK 없음';

COMMENT ON COLUMN "posting_competencies"."weight" IS 'CHECK 0~1은 career_fit_constraints.sql';

COMMENT ON TABLE "job_matches" IS '최신 결과만 유지. 모델/프롬프트 변경 전후 비교는 job_match_history 참고';

COMMENT ON COLUMN "job_matches"."match_score" IS 'CHECK 0~100은 career_fit_constraints.sql';

COMMENT ON COLUMN "job_matches"."coverage" IS '[{competencyId, score, status}]';

COMMENT ON COLUMN "job_matches"."actions" IS '[{seq, effort, tag, title}]';

COMMENT ON TABLE "applications" IS 'company/position/dday/match는 저장하지 않는다 — job_postings/companies/job_matches에서 파생. 화면은 반드시 join으로 조회';

COMMENT ON COLUMN "applications"."job_posting_id" IS '수동 지원 등록 시 서비스 레이어가 MANUAL companies/job_postings row를 먼저 만들고 연결한다';

COMMENT ON COLUMN "applications"."submitted_at" IS 'CHECK: SUBMITTED 이후 상태면 NOT NULL, career_fit_constraints.sql';

COMMENT ON COLUMN "cover_letter_questions"."sequence" IS 'CHECK > 0';

COMMENT ON COLUMN "cover_letter_questions"."length_limit" IS 'CHECK > 0 (not null인 경우)';

COMMENT ON COLUMN "cover_letter_questions"."requirements" IS '[{seq, content}] — 충족 여부는 여기 저장하지 않는다';

COMMENT ON COLUMN "cover_letter_answers"."version" IS 'CHECK > 0. MAX(version)+1 동시성은 유니크(question_id, version)를 최종 방어선으로, 충돌 시 재시도';

COMMENT ON COLUMN "cover_letter_answers"."char_count" IS 'CHECK >= 0';

COMMENT ON COLUMN "cover_letter_answers"."byte_count" IS 'CHECK >= 0';

COMMENT ON COLUMN "cover_letter_answers"."is_final" IS '문항당 true는 하나 — 부분 유니크 인덱스는 career_fit_constraints.sql';

COMMENT ON COLUMN "answer_requirement_results"."requirement_seq" IS 'cover_letter_questions.requirements[].seq 참조값 (배열 인덱스, FK 아님)';

COMMENT ON TABLE "outbox_events" IS '업무 트랜잭션과 같은 트랜잭션에 커밋 → 릴레이가 폴링/CDC로 브로커 발행 → AI Service DB가 소비. Career↔AI 간 최종 일관성의 핵심';

COMMENT ON COLUMN "outbox_events"."aggregate_type" IS 'EXPERIENCE, JOB_POSTING, ANSWER 등';

COMMENT ON COLUMN "outbox_events"."event_type" IS 'ExperienceCreated, ExperienceUpdated 등';

ALTER TABLE "user_auth_providers" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "experiences" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "applications" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_matches" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_match_history" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "bookmarks" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "competency_aliases" ADD FOREIGN KEY ("competency_id") REFERENCES "competencies" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "experience_competencies" ADD FOREIGN KEY ("competency_id") REFERENCES "competencies" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "posting_competencies" ADD FOREIGN KEY ("competency_id") REFERENCES "competencies" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "competency_candidates" ADD FOREIGN KEY ("merged_competency_id") REFERENCES "competencies" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "competency_candidates" ADD FOREIGN KEY ("reviewed_by") REFERENCES "users" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "experience_competencies" ADD FOREIGN KEY ("experience_id") REFERENCES "experiences" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "answer_experiences" ADD FOREIGN KEY ("experience_id") REFERENCES "experiences" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_postings" ADD FOREIGN KEY ("company_id") REFERENCES "companies" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "posting_competencies" ADD FOREIGN KEY ("job_posting_id") REFERENCES "job_postings" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "competency_candidates" ADD FOREIGN KEY ("job_posting_id") REFERENCES "job_postings" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "bookmarks" ADD FOREIGN KEY ("job_posting_id") REFERENCES "job_postings" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "applications" ADD FOREIGN KEY ("job_posting_id") REFERENCES "job_postings" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_matches" ADD FOREIGN KEY ("job_posting_id") REFERENCES "job_postings" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_match_history" ADD FOREIGN KEY ("job_posting_id") REFERENCES "job_postings" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "cover_letter_questions" ADD FOREIGN KEY ("application_id") REFERENCES "applications" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "cover_letter_answers" ADD FOREIGN KEY ("question_id") REFERENCES "cover_letter_questions" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "answer_requirement_results" ADD FOREIGN KEY ("answer_id") REFERENCES "cover_letter_answers" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "answer_experiences" ADD FOREIGN KEY ("answer_id") REFERENCES "cover_letter_answers" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;
