Project career_fit {
  database_type: 'PostgreSQL'
  note: '''
    Career Backend DB — 물리 ERD v2 (2026-09-03)
    v1 리뷰에서 지적된 P0~P2를 반영.
    AI 관련 테이블(ai_tasks 등)은 ai_service.dbml로 물리 분리했음.
    이 파일에서 이름이 source_ai_task_id 인 컬럼은 AI Service DB의 ai_tasks.id 값을
    저장만 할 뿐, 물리 FK(Ref)가 아니다 — PostgreSQL은 cross-database FK를 지원하지 않음.
  '''
}

// ── ENUM · DB에는 문자열로 저장 (@Enumerated(EnumType.STRING)) ──
Enum auth_provider {
  LOCAL
  GOOGLE
}

Enum competency_category {
  TECH
  SOFT
  DOMAIN
  VALUE
}

Enum candidate_status {
  PENDING
  APPROVED
  REJECTED
}

Enum experience_source {
  MANUAL
  AI_INTAKE
}

Enum posting_source {
  CRAWLED
  MANUAL
}

Enum posting_status {
  ACTIVE
  CLOSED
  DELETED
  COLLECT_FAILED
}

Enum posting_questions_status {
  NOT_CHECKED
  AVAILABLE
  NOT_AVAILABLE
  FAILED
}

Enum evidence_verify_status {
  UNVERIFIED
  VERIFIED
  REJECTED
}

Enum match_verdict {
  RECOMMEND
  CONDITIONAL
  HOLD
}

// v1: PLANNED/WRITING/SUBMITTED/INTERVIEW/RESULT
// v2: RESULT가 합/불을 표현 못해 세분화, CANCELLED 추가
Enum application_status {
  PLANNED
  WRITING
  SUBMITTED
  CANCELLED
  DOCUMENT_PASSED
  DOCUMENT_FAILED
  INTERVIEWING
  FINAL_PASSED
  FINAL_FAILED
}

Enum length_unit {
  CHARACTER
  BYTE
}

Enum answer_source {
  MANUAL
  AI_DRAFT
}

Enum outbox_status {
  PENDING
  PUBLISHED
  FAILED
}

// ── 1 · 사용자 ──
Table users {
  id                bigint        [pk, increment]
  email             varchar(255)  [not null, unique]
  name              varchar(100)  [not null]
  profile_image_url varchar(1000)
  created_at        timestamptz   [not null, default: `now()`]
  updated_at        timestamptz   [not null, default: `now()`]

  note: '이메일 동일 = 자동 계정 병합 금지. 소셜 계정 연결은 검증된 이메일 + 명시적 연결 절차로만 수행 (서비스 레이어 규칙)'
}

Table user_auth_providers {
  id               bigint        [pk, increment]
  user_id          bigint        [not null]
  provider         auth_provider [not null]
  provider_user_id varchar(255)  [not null, note: 'LOCAL: users.email과 동일 값, GOOGLE: sub']
  password_hash    varchar(255)  [note: 'LOCAL만 NOT NULL — CHECK는 career_fit_constraints.sql']
  created_at       timestamptz   [not null, default: `now()`]
  updated_at       timestamptz   [not null, default: `now()`]

  Indexes {
    (provider, provider_user_id) [unique]
    (user_id, provider) [unique]
  }
}

// ── 2 · 역량 사전 ──
Table competencies {
  id         bigint              [pk, increment]
  name       varchar(100)        [not null, unique]
  category   competency_category [not null]
  created_at timestamptz         [not null, default: `now()`]
  updated_at timestamptz         [not null, default: `now()`]
}

Table competency_aliases {
  id            bigint       [pk, increment]
  competency_id bigint       [not null]
  // v1: (competency_id, alias) unique → 하나의 별칭이 여러 역량을 가리킬 수 있었음
  // v2: 정책 확정 — 별칭 1개는 역량 1개만 가리킨다
  alias         varchar(100) [not null, unique]
  created_at    timestamptz  [not null, default: `now()`]

  Indexes {
    alias [note: 'career_fit_constraints.sql에서 GIN(gin_trgm_ops)로 교체 — %like% 검색용. 이 인덱스 자체는 정확 일치 조회용으로 유지']
  }
}

Table competency_candidates {
  id                   bigint           [pk, increment]
  job_posting_id       bigint           [not null]
  raw_term             varchar(100)     [not null]
  status               candidate_status [not null, default: 'PENDING']
  merged_competency_id bigint
  reviewed_by          bigint           [note: 'users.id, 승인자']
  created_at           timestamptz      [not null, default: `now()`]
  reviewed_at          timestamptz

  Indexes {
    (job_posting_id, raw_term) [unique]
    status
  }
}

// ── 3 · 경험 ──
Table experiences {
  id                bigint            [pk, increment]
  user_id           bigint            [not null]
  title             varchar(200)      [not null]
  category          varchar(50)
  period_text       varchar(50)       [not null]
  sort_date         date
  situation         text
  task              text
  action            text
  result            text
  source            experience_source [not null, default: 'MANUAL']
  source_ai_task_id bigint            [note: 'AI Service DB(ai_tasks.id) 참조값. 물리 FK 없음']
  created_at        timestamptz       [not null, default: `now()`]
  updated_at        timestamptz       [not null, default: `now()`]

  Indexes {
    (user_id, sort_date)
  }
}

Table experience_competencies {
  experience_id bigint       [not null]
  competency_id bigint       [not null]
  strength      decimal(3,2) [not null, default: 0.70, note: 'CHECK 0~1은 career_fit_constraints.sql']
  created_at    timestamptz  [not null, default: `now()`]
  updated_at    timestamptz  [not null, default: `now()`]

  Indexes {
    (experience_id, competency_id) [pk]
    competency_id
  }
}

// ── 4 · 기업 · 공고 ──
Table companies {
  id              bigint        [pk, increment]
  name            varchar(200)  [not null]
  // v1: name UNIQUE만 → 표기 차이(주식회사/영문 등)로 동일 기업 중복 판별 실패
  // v2: 정규화된 값을 별도 컬럼으로 분리해 UNIQUE
  normalized_name varchar(200)  [not null, unique, note: '표기 차이 정규화 후 값(소문자·특수문자 제거 등). 동일기업 판별 키']
  career_url      varchar(1000)
  created_at      timestamptz   [not null, default: `now()`]
  updated_at      timestamptz   [not null, default: `now()`]
}

Table job_postings {
  id                    bigint                   [pk, increment]
  company_id            bigint                   [not null]
  position              varchar(200)             [not null]
  content               text
  source_url            varchar(1000)            [unique, note: '삽입 전 쿼리스트링·trailing slash 정규화 (서비스 레이어)']
  deadline              date                     [note: 'NULL 허용 = 상시채용']
  source                posting_source           [not null]
  // v1: 상태 컬럼 없음 → active=true API가 deadline만으로 판정 불가
  status                posting_status           [not null, default: 'ACTIVE']
  // v1: boolean → "확인 안 함"과 "확인했으나 없음"을 구분 못함
  questions_from_server posting_questions_status [not null, default: 'NOT_CHECKED']
  source_ai_task_id     bigint                   [note: 'AI Service DB(ai_tasks.id) 참조값. 물리 FK 없음']
  collected_at          timestamptz
  created_at            timestamptz              [not null, default: `now()`]
  updated_at            timestamptz              [not null, default: `now()`]

  Indexes {
    (company_id, deadline)
    (status, deadline)
  }
}

Table posting_competencies {
  job_posting_id        bigint                 [not null]
  competency_id         bigint                 [not null]
  weight                decimal(3,2)           [not null, note: 'CHECK 0~1은 career_fit_constraints.sql']
  evidence_line         text
  evidence_start_offset integer
  evidence_end_offset   integer
  evidence_section      varchar(100)
  extractor_version     varchar(50)
  evidence_status       evidence_verify_status [not null, default: 'UNVERIFIED']
  created_at            timestamptz            [not null, default: `now()`]
  updated_at            timestamptz            [not null, default: `now()`]

  Indexes {
    (job_posting_id, competency_id) [pk]
    competency_id
  }
}

Table bookmarks {
  user_id        bigint      [not null]
  job_posting_id bigint      [not null]
  created_at     timestamptz [not null, default: `now()`]

  Indexes {
    (user_id, job_posting_id) [pk]
  }
}

// ── 5 · 매칭 평가 ──
Table job_matches {
  id             bigint        [pk, increment]
  user_id        bigint        [not null]
  job_posting_id bigint        [not null]
  match_score    decimal(5,2)  [note: 'CHECK 0~100은 career_fit_constraints.sql']
  verdict        match_verdict
  headline       varchar(300)
  summary        text
  coverage       jsonb         [note: '[{competencyId, score, status}]']
  actions        jsonb         [note: '[{seq, effort, tag, title}]']
  input_hash     varchar(64)
  computed_at    timestamptz
  created_at     timestamptz   [not null, default: `now()`]

  Indexes {
    (user_id, job_posting_id) [unique]
  }

  note: '최신 결과만 유지. 모델/프롬프트 변경 전후 비교는 job_match_history 참고'
}

// v2 신규 — 모델/프롬프트 변경 전후 비교용 이력
Table job_match_history {
  id             bigint        [pk, increment]
  user_id        bigint        [not null]
  job_posting_id bigint        [not null]
  match_score    decimal(5,2)
  verdict        match_verdict
  input_hash     varchar(64)
  model_version  varchar(50)
  computed_at    timestamptz   [not null]
  created_at     timestamptz   [not null, default: `now()`]

  Indexes {
    (user_id, job_posting_id, computed_at)
  }
}

// ── 6 · 지원서 · 자소서 ──
Table applications {
  id             bigint             [pk, increment]
  user_id        bigint             [not null]
  // v1: postingId NULL인 목업 데이터 3건 존재 → NOT NULL과 충돌 확인됨
  // v2: NOT NULL 유지, 대신 "수동 지원 = MANUAL job_posting 선(先)생성"을 서비스 레이어 필수 규칙으로 명문화
  job_posting_id bigint             [not null, note: '수동 지원 등록 시 서비스 레이어가 MANUAL companies/job_postings row를 먼저 만들고 연결한다']
  status         application_status [not null, default: 'PLANNED']
  submitted_at   timestamptz        [note: 'CHECK: SUBMITTED 이후 상태면 NOT NULL, career_fit_constraints.sql']
  created_at     timestamptz        [not null, default: `now()`]
  updated_at     timestamptz        [not null, default: `now()`]

  Indexes {
    (user_id, job_posting_id) [unique]
    user_id
  }

  note: 'company/position/dday/match는 저장하지 않는다 — job_postings/companies/job_matches에서 파생. 화면은 반드시 join으로 조회'
}

Table cover_letter_questions {
  id                bigint      [pk, increment]
  application_id    bigint      [not null]
  sequence          integer     [not null, note: 'CHECK > 0']
  prompt_text       text        [not null]
  intent            text
  length_limit      integer     [note: 'CHECK > 0 (not null인 경우)']
  length_limit_unit length_unit [not null, default: 'CHARACTER']
  // v1: requirements[].addressed가 버전마다 달라질 수 있는데 문항 JSONB에 저장 → 버전별 결과 표현 불가
  // v2: requirements에는 요구사항 "정의"만, 충족 여부는 answer_requirement_results로 분리
  requirements      jsonb       [not null, default: '[]', note: '[{seq, content}] — 충족 여부는 여기 저장하지 않는다']
  created_at        timestamptz [not null, default: `now()`]
  updated_at        timestamptz [not null, default: `now()`]

  Indexes {
    (application_id, sequence) [unique]
  }
}

Table cover_letter_answers {
  id          bigint        [pk, increment]
  question_id bigint        [not null]
  version     integer       [not null, note: 'CHECK > 0. MAX(version)+1 동시성은 유니크(question_id, version)를 최종 방어선으로, 충돌 시 재시도']
  content     text          [not null]
  char_count  integer       [note: 'CHECK >= 0']
  byte_count  integer       [note: 'CHECK >= 0']
  is_final    boolean       [not null, default: false, note: '문항당 true는 하나 — 부분 유니크 인덱스는 career_fit_constraints.sql']
  source      answer_source [not null, default: 'MANUAL']
  created_at  timestamptz   [not null, default: `now()`]

  Indexes {
    (question_id, version) [unique]
  }
}

// v2 신규 — requirements 충족 여부를 답변 버전 단위로 분리
Table answer_requirement_results {
  id              bigint      [pk, increment]
  answer_id       bigint      [not null]
  requirement_seq integer     [not null, note: 'cover_letter_questions.requirements[].seq 참조값 (배열 인덱스, FK 아님)']
  addressed       boolean     [not null, default: false]
  created_at      timestamptz [not null, default: `now()`]

  Indexes {
    (answer_id, requirement_seq) [unique]
  }
}

Table answer_experiences {
  answer_id     bigint [not null]
  experience_id bigint [not null]

  Indexes {
    (answer_id, experience_id) [pk]
  }
}

// ── 7 · Outbox (v2 신규) ──
Table outbox_events {
  id             bigint        [pk, increment]
  aggregate_type varchar(50)   [not null, note: 'EXPERIENCE, JOB_POSTING, ANSWER 등']
  aggregate_id   bigint        [not null]
  event_type     varchar(50)   [not null, note: 'ExperienceCreated, ExperienceUpdated 등']
  payload        jsonb         [not null]
  status         outbox_status [not null, default: 'PENDING']
  published_at   timestamptz
  created_at     timestamptz   [not null, default: `now()`]

  Indexes {
    (status, created_at)
  }

  note: '업무 트랜잭션과 같은 트랜잭션에 커밋 → 릴레이가 폴링/CDC로 브로커 발행 → AI Service DB가 소비. Career↔AI 간 최종 일관성의 핵심'
}

// ── 관계 ──
Ref: user_auth_providers.user_id > users.id [delete: cascade]
Ref: experiences.user_id > users.id [delete: cascade]
Ref: applications.user_id > users.id [delete: cascade]
Ref: job_matches.user_id > users.id [delete: cascade]
Ref: job_match_history.user_id > users.id [delete: cascade]
Ref: bookmarks.user_id > users.id [delete: cascade]

Ref: competency_aliases.competency_id > competencies.id [delete: cascade]
Ref: experience_competencies.competency_id > competencies.id
Ref: posting_competencies.competency_id > competencies.id
Ref: competency_candidates.merged_competency_id > competencies.id [delete: set null]
Ref: competency_candidates.reviewed_by > users.id [delete: set null]

Ref: experience_competencies.experience_id > experiences.id [delete: cascade]
// v1: CASCADE → 경험 삭제 시 과거 답변의 근거 추적 정보 소실
// v2: RESTRICT로 변경. 경험은 소프트 삭제(별도 deleted_at) 정책 권장
Ref: answer_experiences.experience_id > experiences.id [delete: restrict]

Ref: job_postings.company_id > companies.id
Ref: posting_competencies.job_posting_id > job_postings.id [delete: cascade]
Ref: competency_candidates.job_posting_id > job_postings.id [delete: cascade]
Ref: bookmarks.job_posting_id > job_postings.id [delete: cascade]
Ref: applications.job_posting_id > job_postings.id
Ref: job_matches.job_posting_id > job_postings.id [delete: cascade]
Ref: job_match_history.job_posting_id > job_postings.id [delete: cascade]

Ref: cover_letter_questions.application_id > applications.id [delete: cascade]
Ref: cover_letter_answers.question_id > cover_letter_questions.id [delete: cascade]
Ref: answer_requirement_results.answer_id > cover_letter_answers.id [delete: cascade]
Ref: answer_experiences.answer_id > cover_letter_answers.id [delete: cascade]

// ── 테이블 그룹 ──
TableGroup "1 · 사용자" {
  users
  user_auth_providers
}

TableGroup "2 · 역량 사전" {
  competencies
  competency_aliases
  competency_candidates
}

TableGroup "3 · 경험" {
  experiences
  experience_competencies
}

TableGroup "4 · 기업 · 공고" {
  companies
  job_postings
  posting_competencies
  bookmarks
}

TableGroup "5 · 매칭" {
  job_matches
  job_match_history
}

TableGroup "6 · 지원서 · 자소서" {
  applications
  cover_letter_questions
  cover_letter_answers
  answer_requirement_results
  answer_experiences
}

TableGroup "7 · Outbox" {
  outbox_events
}
